2004-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* loader.c (mono_lookup_pinvoke_call): Strip .dll from library names.
	Fixes #22532.

	* exception.h exception.c loader.h loader.c icall.c marshal.h marshal.c:
	Applied patch from Bernie Solomon  <bernard@ugsolutions.com>. Throw
	proper exceptions on DllImport problems.

Mon Jan 19 17:50:27 CET 2004 Paolo Molaro <lupus@ximian.com>

	* class.c, metadata.c: eliminate CSIZE macro.

2004-01-19  Lluis Sanchez Gual  <lluis@ximian.com>

	* icall.c: Added ves_icall_type_IsInstanceOf internal call.
	* object.h: Added async_callback field in MonoAsyncResult.
	* marshal.c: In mono_delegate_begin_invoke, set the value of async_callback.
	* verify.c: Added async_callback in MonoAsyncResult layout.

2004-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c (mono_reflection_get_custom_attrs): Add support
	for Modules.

2004-01-16  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (mono_string_builder_to_utf8): Fix stringbuilder 
	marshalling.
	(mono_marshal_method_from_wrapper): Add null pointer check.

2004-01-16  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h: Set version number to 36 and reflect
	latest symbol writer changes.

2004-01-16  Zoltan Varga  <vargaz@freemail.hu>

	* class.c (mono_bounded_array_class_get): Set 'bounded' to FALSE for
	multi-dimensional arrays.
	(mono_class_is_assignable_from): Check vectors<->one dim. arrays.
	(mono_class_from_mono_type): Use bounded_array_class_get.
	
	* class.c (mono_bounded_array_class_get): New function which takes
	a 'bounded' bool argument to distinguish vectors from one dimensional
	arrays.

	* icall.c (ves_icall_System_Array_CreateInstanceImpl): Call 
	bounded_array_class_get if the array has bounds.

	* icall.c (ves_icall_System_Reflection_Assembly_InternalGetType): 
	Search modules loaded using AssemblyBuilder:AddModule as well.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* appdomain.c: increased corlib version.